Update contact section styling

--- a/index.html
+++ b/index.html
@@ -596,64 +596,51 @@
         </div>
       </section>
 
-      <section class="contact-section" id="contact">
-        <h1 class="section-title autoDisplay">Let's talk😊</h1>
+<section class="contact-section" id="contact">
+  <h1 class="section-title autoDisplay">Let's talk😊</h1>
 
-        <div class="social-box autoBlur">
-          <a href="#"><i class="bx bxs-phone"></i> +92 308 8000052</a>
-          <a href="#"><i class="bx bxl-gmail"></i> hifzaofpk@gmail.com</a>
-          <a href="https://www.linkedin.com/in/hifza-khalid/">
-            <i class="bx bxl-linkedin-square"></i>hifza-khalid
-          </a>
-          <div class="social-icons">
-            <a href="https://www.youtube.com/@hifzakhalid7367"
-              ><i class="bx bxl-youtube"></i
-            ></a>
-            <a href="https://www.instagram.com/hifzaofpk/"
-              ><i class="bx bxl-instagram"></i
-            ></a>
-            <a href="https://www.facebook.com/hifza-khalid/"
-              ><i class="bx bxl-facebook-circle"></i
-            ></a>
-          </div>
-        </div>
+  <p class="intro-text">
+    Whether you're looking to build a new website, improve your existing
+    platform, or bring a unique project to life ... I'm here to help.
+  </p>
 
-        <!-- ✅ Contact Form integrated with Formspree -->
-        <form
-          class="contact-box autoBlur"
-          action="https://formspree.io/f/xyzddjkp"
-          method="POST"
-        >
-          <p>
-            Whether you're looking to build a new website, improve your existing
-            platform, or bring a unique project to life ... I'm here to help.
-          </p>
+  <div class="contact-row">
+    <!-- Left Social Box -->
+    <div class="social-box autoBlur">
+      <a href="#"><i class="bx bxs-phone"></i> +92 308 8000052</a>
+      <a href="#"><i class="bx bxl-gmail"></i> hifzaofpk@gmail.com</a>
+      <a href="https://www.linkedin.com/in/hifza-khalid/">
+        <i class="bx bxl-linkedin-square"></i> hifza-khalid
+      </a>
+      <div class="social-icons">
+        <a href="https://www.youtube.com/@hifzakhalid7367"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.instagram.com/hifzaofpk/"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/hifza-khalid/"><i class="bx bxl-facebook-circle"></i></a>
+      </div>
+    </div>
 
-          <p>Full Name</p>
-          <input
-            name="name"
-            type="text"
-            placeholder="Your Full Name"
-            required
-          />
+    <!-- Right Form -->
+    <form class="contact-box autoBlur" action="https://formspree.io/f/xyzddjkp" method="POST">
+      <p>Full Name</p>
+      <input name="name" type="text" placeholder="Your Full Name" required />
 
-          <p>Email Address</p>
-          <input name="email" type="email" placeholder="Your Email" required />
+      <p>Email Address</p>
+      <input name="email" type="email" placeholder="Your Email" required />
 
-          <p>Your Message</p>
-          <textarea
-            name="message"
-            class="input-message"
-            placeholder="Share your thoughts..."
-            required
-          ></textarea>
-          <!-- <input type="hidden" name="_redirect" value="thank-you.html"> -->
+      <p>Your Message</p>
+      <textarea name="message" class="input-message" placeholder="Share your thoughts..." required></textarea>
 
-          <button type="submit">
-            Send Message <i class="bx bx-mail-send"></i>
-          </button>
-        </form>
-      </section>
+      <button type="submit">
+        Send Message <i class="bx bx-mail-send"></i>
+      </button>
+    </form>
+  </div>
+</section>
+
+
+
+
+
 
 
 
