--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               plays-inline
             ></video>
 
-            <button><i class="bx bx-send"></i> Contact Me</button>
+           <button onclick="location.href='#contact'"><i class="bx bx-send"></i> Contact Me</button>
           </div>
 
           <div class="card">
