--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
           <div class="card">
             <h1>I’m very flexible with time zone communications & locations</h1>
-            <p>I'm based in Italy, Bari and open to remote work worldwide.</p>
+            <p>Based in Pakistan, I’m open to remote opportunities worldwide.</p>
 
             <video
               src="videos/glob.mp4"
