--- a/index.html
+++ b/index.html
@@ -607,7 +607,9 @@
   <div class="contact-row">
     <!-- Left Social Box -->
     <div class="social-box autoBlur">
-      <a href="#"><i class="bx bxs-phone"></i> +92 308 8000052</a>
+     <a href="https://discord.com/users/1212977438712270921" target="_blank">
+  <i class="bx bxl-discord"></i> Hifza Khalid
+</a>
       <a href="#"><i class="bx bxl-gmail"></i> hifzaofpk@gmail.com</a>
       <a href="https://www.linkedin.com/in/hifza-khalid/">
         <i class="bx bxl-linkedin-square"></i> hifza-khalid
