--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video loop id="projectVideo1" src="videos/project1.mp4"></video>
+            <video loop muted id="projectVideo1" src="videos/project1.mp4"></video>
             <div class="hover-sign"></div>
           </div>
           <div class="project-info fadein-left">
@@ -248,7 +248,7 @@
 
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video loop id="projectVideo2" src="videos/project2.mp4"></video>
+            <video loop muted id="projectVideo2" src="videos/project2.mp4"></video>
           </div>
           <div class="project-info fadein-left">
             <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
@@ -265,7 +265,7 @@
 
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video loop id="projectVideo3" src="videos/project3.mp4"></video>
+            <video loop muted id="projectVideo3" src="videos/project3.mp4"></video>
           </div>
           <div class="project-info fadein-left">
             <h1>Movie <span class="gradient">Landing</span> Page</h1>
