--- a/index.html
+++ b/index.html
@@ -224,62 +224,53 @@
       </seaction>
 
       <section id="projects" class="my-project">
-        <h1 class="section-title autoDisplay">
-          My Projects <i class="bx bx-layer"></i>
-        </h1>
+  <h1 class="section-title autoDisplay">
+    My Projects <i class="bx bx-layer"></i>
+  </h1>
 
-        <div class="project-card">
-          <div class="project-vidbox autoBlur">
-            <video loop muted id="projectVideo1" src="videos/project1.mp4"></video>
-            <div class="hover-sign"></div>
-          </div>
-          <div class="project-info fadein-left">
-            <h1>Animated <span class="gradient">Gaming</span> Website</h1>
-            <p>
-              A fully interactive gaming website with smooth animations,
-              engaging visuals, and a dynamic interface designed to create an
-              immersive user experience for gamers.
-            </p>
-            <button onclick="window.location.href='request.html'">
-              <i class="bx bx-link-external"></i> Website
-            </button>
-          </div>
-        </div>
+  <div class="project-card">
+    <div class="project-vidbox autoBlur">
+      <video loop muted src="videos/project1.mp4"></video>
+      <div class="hover-sign">👆</div>
+    </div>
+    <div class="project-info fadein-left">
+      <h1>Animated <span class="gradient">Gaming</span> Website</h1>
+      <p>A fully interactive gaming website with smooth animations and engaging visuals.</p>
+      <button onclick="window.location.href='request.html'">
+        <i class="bx bx-link-external"></i> Website
+      </button>
+    </div>
+  </div>
 
-        <div class="project-card">
-          <div class="project-vidbox autoBlur">
-            <video loop muted id="projectVideo2" src="videos/project2.mp4"></video>
-          </div>
-          <div class="project-info fadein-left">
-            <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
-            <p>
-              A sleek and professional portfolio website built to showcase
-              skills, projects, and achievements with a modern layout and
-              responsive design for all devices.
-            </p>
-            <button onclick="window.location.href='request.html'">
-              <i class="bx bx-link-external"></i> Website
-            </button>
-          </div>
-        </div>
+  <div class="project-card">
+    <div class="project-vidbox autoBlur">
+      <video loop muted src="videos/project2.mp4"></video>
+      <div class="hover-sign">👆</div>
+    </div>
+    <div class="project-info fadein-left">
+      <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
+      <p>A sleek portfolio website to showcase skills, projects, and achievements.</p>
+      <button onclick="window.location.href='request.html'">
+        <i class="bx bx-link-external"></i> Website
+      </button>
+    </div>
+  </div>
 
-        <div class="project-card">
-          <div class="project-vidbox autoBlur">
-            <video loop muted id="projectVideo3" src="videos/project3.mp4"></video>
-          </div>
-          <div class="project-info fadein-left">
-            <h1>Movie <span class="gradient">Landing</span> Page</h1>
-            <p>
-              A creative landing page designed for movies, featuring trailers,
-              key highlights, and call-to-action elements to attract viewers and
-              promote film releases effectively.
-            </p>
-            <button onclick="window.location.href='request.html'">
-              <i class="bx bx-link-external"></i> Website
-            </button>
-          </div>
-        </div>
-      </section>
+  <div class="project-card">
+    <div class="project-vidbox autoBlur">
+      <video loop muted src="videos/project3.mp4"></video>
+      <div class="hover-sign">👆</div>
+    </div>
+    <div class="project-info fadein-left">
+      <h1>Movie <span class="gradient">Landing</span> Page</h1>
+      <p>A creative landing page for movies with trailers and call-to-action elements.</p>
+      <button onclick="window.location.href='request.html'">
+        <i class="bx bx-link-external"></i> Website
+      </button>
+    </div>
+  </div>
+</section>
+
 
       <section id="skills" class="skills-section">
         <h1 class="section-title autoDisplay">My Skills 💻</h1>
