--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
                 <div class="project-info">
                     <h1>Animated <span class="gradient">Gaming</span> Website</h1>
                     <p>A fully responsive gaming website with smooth animations and interactive elements. Built with modern frontend technologies for optimal performance.</p>
-                    <button><i class='bx bx-link-external' ></i> View Project</button>
+                    <button onclick="window.location.href='request.html'">
+              <i class="bx bx-link-external"></i> Website
+            </button>
                 </div>
             </div>
 
@@ -244,7 +246,9 @@
                 <div class="project-info">
                     <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
                     <p>A sleek and modern portfolio website designed to showcase creative work. Features a clean layout with smooth transitions.</p>
-                    <button><i class='bx bx-link-external' ></i> View Project</button>
+                  <button onclick="window.location.href='request.html'">
+              <i class="bx bx-link-external"></i> Website
+            </button>
                 </div>
             </div>
 
@@ -255,7 +259,9 @@
                 <div class="project-info">
                     <h1>Movie <span class="gradient">Landing</span> Page</h1>
                     <p>An engaging landing page for a movie streaming service. Features video backgrounds and dynamic content loading.</p>
-                    <button><i class='bx bx-link-external' ></i> View Project</button>
+                 <button onclick="window.location.href='request.html'">
+              <i class="bx bx-link-external"></i> Website
+            </button>
                 </div>
             </div>
         </section>
