Update index.html ☑

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header data-aos="fade-down" data-aos-duration="2000">
         <div class="left">
           <img src="images/mainlogo.png" alt="logo" />
-          <h2><span style="color: #72a1dea2">Hifza</span>Code</h2>
+          <h2><span style="color: #72a1dea2">Hifza</span>Khalid</h2>
         </div>
 
         <ul>
@@ -684,7 +684,7 @@
         </div>
         <!-- Copyright -->
         <h1 style="font-size: 1rem; margin: 0">
-          © 2025, Made with ❤️ by HifzaCode
+          © 2025, Made with ❤️ by HifzaKhalid
         </h1>
       </div>
 
